# omacros

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ext/gtest/: CMakeLists.txt
src/: file_view.cpp  file_view.hpp  fiter.cpp  fiter.hpp  main.cpp  types.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/data/: Ecclesiastes.txt
tests/src/: file_view_tests.cpp  fiter_tests.cpp  tokenizer_tests.cpp  utils_tests.cpp
